# bridge.hc

./: Cargo.toml
crates/bridge/workdir/: dna.yaml
crates/bridge/zomes/coordinator/transaction_requests/: Cargo.toml
crates/bridge/zomes/coordinator/transaction_requests/src/: handlers.rs
crates/bridge/zomes/coordinator/transactions/: Cargo.toml
crates/bridge/zomes/coordinator/transactions/src/: handlers.rs  lib.rs  signals.rs  utils.rs
crates/bridge/zomes/coordinator/transactions/src/countersigning/: checks.rs  common.rs  initiator.rs  responder.rs
crates/bridge/zomes/integrity/transactions_and_requests/: Cargo.toml
crates/bridge_hc_types/src/: lib.rs
ui/src/bridge/transactions/: types.ts
