[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*/zomes/coordinator/*", "crates/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.bridge]
path = "crates/bridge/zomes/coordinator/bridge"

[workspace.dependencies.bridge_integrity]
path = "crates/bridge/zomes/integrity/bridge"

[workspace.dependencies.transactions]
path = "crates/bridge/zomes/coordinator/transactions"

[workspace.dependencies.transaction_requests]
path = "crates/bridge/zomes/coordinator/transaction_requests"

[workspace.dependencies.transactions_and_requests_integrity]
path = "crates/bridge/zomes/integrity/transactions_and_requests"

[workspace.dependencies.profiles]
path = "crates/bridge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "crates/bridge/zomes/integrity/profiles"

[workspace.dependencies.bridge_hc_types]
path = "crates/bridge_hc_types"
